force-app/main/default/objects/Lead_Scoring_Condition_Detail__c/Lead_Scoring_Condition_Detail__c.object-meta.xml
<CustomObject>
    <label>Lead Scoring Condition Detail</label>
    <nameField>
        <displayFormat>SCD-{000}</displayFormat>
        <label>Scoring Condition Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Scoring Condition Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>