force-app/main/default/objects/Lead_Scoring_Condition_Detail__c/fields/Lead_Scoring_Condition__c.field-meta.xml
<CustomField>
    <fullName>Lead_Scoring_Condition__c</fullName>
    <label>Scoring Condition Name</label>
    <referenceTo>Lead_Scoring_Condition__c</referenceTo>
    <relationshipLabel>Lead Scoring Condition Detail</relationshipLabel>
    <relationshipName>Lead_Scoring_Condition_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>