force-app/main/default/objects/Lead_Scoring_Condition_Detail__c/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>