force-app/main/default/objects/Lead_Scoring_Condition_Detail__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>